--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
     "react-is": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
     "sonner": "^1.7.4",
