--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate deploy",
-    "db:studio": "prisma studio"
+    "prisma:migrate": "prisma migrate deploy"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
