--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate deploy"
+    "prisma:migrate": "prisma migrate deploy",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
@@ -82,6 +83,7 @@
     "zod": "3.25.76"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.9",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22",
@@ -90,7 +92,8 @@
     "@types/react-dom": "^18.3.1",
     "postcss": "^8.5",
     "prisma": "^5.22.0",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^4.1.9",
+    "tw-animate-css": "1.3.3",
     "typescript": "^5"
   }
 }
